# click-jogos

./: LICENSE  Perguntados.hs  README.md  Utils.hs  click-jogos.cabal  main.hs
app/: Forca.hs  JogoDaVelha.hs  Main.hs  MenuInicial.hs  Perguntados.hs  Utils.hi  Utils.hs
app/perguntas/: ciencias.txt  entretenimento.txt  geografia.txt  historia.txt  programacao.txt
click-jogos-haskell/: CHANGELOG.md  package.yaml
click-jogos-haskell/app/: Forca.hs  Main.hs  MenuInicial.hs  Perguntados.hs
click-jogos-haskell/app/perguntas/: programacao.txt
click-jogos-prolog/app/: JogoDaVelha.pl  enforcado.pl  forca.pl  jogo_da_velha.pl  main.pl  menuInicial.pl  menu_inicial.pl  perguntados.pl  utils.pl
click-jogos-prolog/app/perguntas/: ciencias.txt  entretenimento.txt  geografia.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
perguntas/: entreterimento.txt
src/: Forca.hs  Main.hs  MenuInicial.hs  Perguntados.hs  Utils.hs
src/perguntas/: geografia.txt  historia.txt  programacao.txt
