cabal-version:      3.0

name:               click-jogos
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             grupo-1
maintainer:         ana.rita.medeiros.souza@ccc.ufcg.edu.br
build-type:         Simple
extra-doc-files:    CHANGELOG.md

executable click-jogos
    main-is:          Main.hs
    build-depends:    base >= 4.17.2.1,
                      process,
                      text,
                      containers,
                      xhtml,
                      Cabal-syntax
    hs-source-dirs:   app
    default-language: Haskell2010
    exposed-modules:  MenuInicial, Forca, Perguntados, JogoDaVelha, Utils
    other-modules:    MenuInicial, Forca, Perguntados, JogoDaVelha, Utils